2004-09-21  Ross Burton  <ross@burtonini.com>

	* sound-juicer.spec.in:
	Add a pre-remove handler to remove the gconf schemas (Brent Fox)

2004-09-21  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c (sanitize_path):
	Add more special shell characters (Andy Hanton)

2004-09-19  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "gu" "mk" "pa" "tr" to ALL_LINGUAS.

2004-09-17  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Set the expand flag on some treeview columns.

2004-09-17  Ross Burton  <ross@burtonini.com>

	* src/sj-genres.c:
	A few more aliases.

2004-09-13  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-prefs.c:
	Stop using the deprecated GtkOptionMenu, and use GtkComboBox.

2004-09-13  Ross Burton  <ross@burtonini.com>

	* src/sj-genres.c:
	Sort the genre list.

2004-09-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the genre combo when ripping.

	* src/sj-main.c:
	Reset the genre combo when the CD is changed.

2004-09-08  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.c:
	* bacon-cd-selection.h:
	* cd-drive.c:
	* cd-drive.h:
	* dvd_plus_rw_utils.cpp:
	Updated from n-c-b HEAD.

2004-09-07  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix a rare divide-by-zero, spotted by James Courtier-Dutton.

2004-08-26  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add a genre combo.

	* src/sj-genres.[ch]:
	Add a genre enum, map and name functions.

	* src/Makefile.am:
	Added sj-genres.[ch]
	
	* src/sj-structures.h:
	Add a genre field.

	* src/sj-metadata-musicbrainz.c:
	Initialise the genre field.
	
	* src/sj-main.c:
	Populate the genre map and set the genre field.

	* src/sj-prefs.c:
	Set the genre field in the sample track.
	
	* src/sj-extractor.c:
	Write the genre field, if set.

2004-08-25  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Be more paranoid about invalid GConf keys.

2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>
