@@ -1,5 +1,13 @@
 2004-09-21  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.schemas.in: 
+	* src/sound-juicer.h: 
+	* src/sj-metadata-musicbrainz.c:
+	Add support for changing the MusicBrainz server using a gconf
+	key. Patch from William Jon McCann <mccann@jhu.edu>.
+
+2004-09-21  Ross Burton  <ross@burtonini.com>
+
 	* sound-juicer.spec.in:
 	Add a pre-remove handler to remove the gconf schemas (Brent Fox)
 
